# financial-tracker

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  REFACTORS_COMPLETED.md  api-routes.md  data_model.md  execution_plan.md  plan.md  requirements.md  requirements_v2.md  tech_decisions.md  ui.md
backend/: .env.example  alembic.ini  backup.py  cli.py  coverage.json  pyproject.toml  quick_start.py
backend/alembic/: env.py
backend/alembic/versions/: 0453f3ff0410_add_mfapi_scheme_code_to_assets.py  2788f59d52d0_add_portfolio_snapshots.py  33b0d2ef25ee_bigint_for_paise_columns.py  3cc18d9706a2_widen_txn_id_to_100.py  5bcf15222da5_add_scheme_category_fix_nps_asset_class.py  8e31f8b614f8_initial_schema.py  943d28bd8a1b_add_cas_snapshots_table.py  a0fa4c347bea_widen_interest_rate_fy_label_to_20.py  a1b2c3d4e5f6_add_transfer_transaction_type.py  b2c3d4e5f6a7_add_billing_transaction_type.py  cc5e17817e4b_initial_schema.py  e47b3dc61761_merge_heads.py  f22980606f02_add_members_table_and_member_id_fks.py
backend/app/: database.py  main.py
backend/app/api/: assets.py  corp_actions.py  goals.py  (+12 more)
backend/scripts/: clean_db.py  merge_assets.py  migrate_sqlite_to_postgres.py  seed_all.py  seed_cas_snapshots.py  seed_closed_positions.py  seed_demo_data.py  seed_epf_rich.py  seed_fd_comprehensive.py  seed_historical_sips.py  seed_interest_rates.py  seed_market_assets.py  seed_nps_schemes.py  seed_personal_info.py  seed_portfolio_snapshots.py  seed_price_cache.py  seed_us_stocks_rsu.py  seed_valuations.py
backend/tests/: conftest.py  factories.py  fixtures_data.py
(+300 files in other folders)
