[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-tracker-backend"
version = "0.1.0"
description = "Personal financial portfolio tracker backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "numpy-financial>=1.0.0",
    "pandas>=2.2.0",
    "pdfplumber>=0.10.0",
    "yfinance>=0.2.37",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "fpdf2>=2.7.0",
    "pyxirr>=0.10.0",
    "numpy>=1.26.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.130.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing -m 'not smoke'"
markers = [
    "smoke: Real file / real network tests. Run with: pytest -m smoke",
]

[tool.coverage.run]
omit = ["tests/*", "scripts/*", "alembic/*"]

[dependency-groups]
dev = [
    "requests>=2.32.5",
    "requests-mock>=1.12.1",
]
